<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FunctionEffectivinessActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/function_01"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/function_formule" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/function_02"/>

            <TableLayout
                android:id="@+id/tablelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="*"
                android:stretchColumns="*">

                <TableRow
                    android:id="@+id/tr_title_01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <com.anychart.AnyChartView
                        android:id="@+id/chart_function_01"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="10dp"/>

                    <com.anychart.AnyChartView
                        android:id="@+id/chart_function_02"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="10dp"/>

                    <com.anychart.AnyChartView
                        android:id="@+id/chart_function_03"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="10dp"/>

                </TableRow>

            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:text="Distribución de las Variables de la Ecuación de Efectividad"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/function_03"/>

            <TableLayout
                android:id="@+id/table_function_01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="*"
                android:stretchColumns="*"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:text="Tabla de Números Esperados de Ocurrencias para los diferentes Niveles de Demanda"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/function_04"/>

            <TableLayout
                android:id="@+id/table_function_02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="*"
                android:stretchColumns="*"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:text="Tabla de Números Índices de las Variables de la Ecuación dada"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/function_05"/>

            <TableLayout
                android:id="@+id/table_function_03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="*"
                android:stretchColumns="*"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:text="Tabla Simulación de la Ecuación"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/function_06"/>

            <com.anychart.AnyChartView
                android:id="@+id/chart_function_04"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/function_07"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>